funvue/k8s/fortune-teller-ng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fv-vue
  labels:
    tags.datadoghq.com/env: "dev"
    tags.datadoghq.com/service: "fv-vue"
    tags.datadoghq.com/version: "0.0.1"
spec:
  selector:
    matchLabels:
      app: fv-vue
  replicas: 1
  template:
    metadata:
      labels:
        app: fv-vue
        tags.datadoghq.com/env: "dev"
        tags.datadoghq.com/service: "fv-vue"
        tags.datadoghq.com/version: "0.0.1"
      annotations:
        ad.datadoghq.com/tags: '{"app": "fv-vue","role": "frontend", "library":"ng"}'
        ad.datadoghq.com/fv-vue.logs: '[{"source":"nginx","service":"fv-vue"}]'
    spec:
      containers:
      - name: fv-vue
        image: cahillsf/fv-vue:0.0.1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fv-vue-service
spec:
  selector:
    app: fv-vue
  # type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: default

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fvserver
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
            opentracing_tag "service.name" "fvserver-ingress";
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fv-vue-service
                port:
                  number: 80
